objects/Partner_Inquiry__c/fields/Percent_Product_Sales__c.field-meta.xml
<CustomField>
    <fullName>Percent_Product_Sales__c</fullName>
    <description>2020-04-02 Customer Engagement Model</description>
    <inlineHelpText>2020-04-02 Customer Engagement Model</inlineHelpText>
    <label>Percent Product Sales</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>