objects/Partner_Inquiry__c/fields/Place_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Incorporation__c</fullName>
    <label>Place of Incorporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>