objects/Partner_Inquiry__c/fields/Primary_Contact_Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Business_Email__c</fullName>
    <description>Primary Contact Business Email</description>
    <label>Primary Contact Business Email</label>
    <type>Email</type>
</CustomField>