objects/Partner_Inquiry__c/fields/Primary_Contact_Business_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Business_Phone_Number__c</fullName>
    <description>Primary Contact Business Phone Number</description>
    <label>Primary Contact Business Phone Number</label>
    <type>Phone</type>
</CustomField>