objects/Partner_Inquiry__c/fields/Primary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_First_Name__c</fullName>
    <description>Primary Contact First Name</description>
    <label>Primary Contact First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>