objects/Partner_Inquiry__c/fields/Primary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Title__c</fullName>
    <description>Primary Contact Title</description>
    <label>Primary Contact Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>