objects/Partner_Inquiry__c/fields/Primary_Market__c.field-meta.xml
<CustomField>
    <fullName>Primary_Market__c</fullName>
    <label>Primary Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Global Enterprise</fullName>
            </value>
            <value>
                <fullName>Mid-Size Enterprise</fullName>
            </value>
            <value>
                <fullName>Small-to-Medium Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>