objects/Partner_Inquiry__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <length>128</length>
    <type>Text</type>
</CustomField>