objects/Partner_Inquiry__c/fields/Reason_for_Tanium_Partner_Interest__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Tanium_Partner_Interest__c</fullName>
    <description>Partner Inquiry Form Prompt: What prompted your interest in becoming a Tanium partner?
2020-03-18</description>
    <label>Reason for Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer request or requirement</fullName>
            </value>
            <value>
                <fullName>Previous engagement with a Tanium employee</fullName>
            </value>
            <value>
                <fullName>Requested or suggested by a Tanium executive</fullName>
            </value>
            <value>
                <fullName>General interest</fullName>
            </value>
            <value>
                <fullName>Referral from a strategic Tanium partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>