objects/Partner_Inquiry__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>for Approvals</description>
    <label>Region</label>
    <length>40</length>
    <type>Text</type>
</CustomField>