objects/Partner_Inquiry__c/fields/Rejection_Reason_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_Enrollment__c</fullName>
    <description>Required if Enrollment is rejected.</description>
    <label>Rejection Reason Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rejection_Reason</valueSetName>
    </valueSet>
</CustomField>