objects/Partner_Inquiry__c/fields/Rejection_Reason_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_Inquiry__c</fullName>
    <description>Required if Inquiry is rejected.</description>
    <label>Rejection Reason Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rejection_Reason</valueSetName>
    </valueSet>
</CustomField>