objects/Partner_Inquiry__c/fields/Sales_Model__c.field-meta.xml
<CustomField>
    <fullName>Sales_Model__c</fullName>
    <description>INC0126388 Label change</description>
    <label>Purchasing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Model</valueSetName>
    </valueSet>
</CustomField>