objects/Partner_Inquiry__c/fields/Service_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Service_Capabilities__c</fullName>
    <label>Service Capabilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>