objects/Partner_Inquiry__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HQ_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HQ_State</valueSetName>
    </valueSet>
</CustomField>