objects/Partner_Inquiry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry Submitted</fullName>
                <default>true</default>
                <label>Inquiry Submitted</label>
            </value>
            <value>
                <fullName>Inquiry Approved</fullName>
            </value>
            <value>
                <fullName>Inquiry Rejected</fullName>
            </value>
            <value>
                <fullName>Inquiry Canceled</fullName>
            </value>
            <value>
                <fullName>Account Shared to WI</fullName>
            </value>
            <value>
                <fullName>Enrollment WIP</fullName>
            </value>
            <value>
                <fullName>Enrollment Submitted</fullName>
            </value>
            <value>
                <fullName>Enrollment Approved</fullName>
            </value>
            <value>
                <fullName>Enrollment Rejected</fullName>
            </value>
            <value>
                <fullName>Partner Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>