objects/Partner_Inquiry__c/fields/Strategic_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Vendors__c</fullName>
    <description>Partner Portal Prompt: Who do you consider strategic vendors for your company?</description>
    <inlineHelpText>Partner Portal Prompt: Who do you consider strategic vendors for your company?</inlineHelpText>
    <label>Strategic Vendors</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>