objects/Partner_Inquiry__c/fields/Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_2__c</fullName>
    <label>Street Address 2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>