objects/Partner_Inquiry__c/fields/Street_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_3__c</fullName>
    <label>Street Address 3</label>
    <length>128</length>
    <type>Text</type>
</CustomField>