objects/Partner_Inquiry__c/fields/Subsidiaries_and_Services_Performed__c.field-meta.xml
<CustomField>
    <fullName>Subsidiaries_and_Services_Performed__c</fullName>
    <description>Subsidiaries/services being performed</description>
    <inlineHelpText>If you answered ‘Yes’ above, provide the names of the subsidiaries, affiliates or other group companies that will provide services and describe the services they will perform.</inlineHelpText>
    <label>Subsidiaries/services being performed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>