objects/Partner_Inquiry__c/fields/Summary_of_Rationale_for_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Rationale_for_Onboarding__c</fullName>
    <label>Summary of Rationale for Onboarding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>