objects/Partner_Inquiry__c/fields/Tanium_Technical_Persons__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Technical_Persons__c</fullName>
    <description>2020-03-03 Partner Inquiry</description>
    <inlineHelpText>2020-03-03 Partner Inquiry</inlineHelpText>
    <label>Tanium Technical Persons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>