objects/Partner_Inquiry__c/fields/Total_Number_of_Endpoints__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Endpoints__c</fullName>
    <description>Partner Portal Prompt: Typical number of endpoints within your target customers?</description>
    <inlineHelpText>Partner Portal Prompt: Typical number of endpoints within your target customers?</inlineHelpText>
    <label>Total Number of Endpoints</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>End_Points</valueSetName>
    </valueSet>
</CustomField>