objects/Partner_Inquiry__c/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <description>Two decimal places are possible.</description>
    <inlineHelpText>Two decimal places are possible.</inlineHelpText>
    <label>Years in Business</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>