objects/Partner_Inquiry__c/fields/Zip_Code_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Postal_Code__c</fullName>
    <label>Zip Code / Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>