objects/Partner_Inquiry__c/validationRules/Partner_Inquiry_Cannot_undo_rejection.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Inquiry_Cannot_undo_rejection</fullName>
    <active>true</active>
    <description>INC0120240 after checking box &quot;Inquiry Rejected&quot;, cannot undo.</description>
    <errorConditionFormula>ISCHANGED(Inquiry_Rejected__c) &amp;&amp;
Inquiry_Rejected__c = FALSE &amp;&amp;
NOT($Profile.Name=&quot;API Only Integration Admin&quot;)</errorConditionFormula>
    <errorDisplayField>Inquiry_Rejected__c</errorDisplayField>
    <errorMessage>Inquiry was marked as rejected, and cannot be reversed.</errorMessage>
</ValidationRule>