objects/Partner_Inquiry__c/validationRules/Partner_Inquiry_Override_Business_Motion.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Inquiry_Override_Business_Motion</fullName>
    <active>true</active>
    <description>INC0126448 Jaclyn Woodward Only Partner Portal Admin can edit Override Business Motion field</description>
    <errorConditionFormula>ISCHANGED( Override_Business_Motion__c ) &amp;&amp;
NOT($Profile.Name=&quot;API Only Integration Admin&quot;) &amp;&amp;
NOT($Profile.Name=&quot;System Administrator&quot;) &amp;&amp;
NOT($Profile.Name=&quot;Tanium System Administrator&quot;) &amp;&amp;
NOT($Profile.Name=&quot;Tanium Partner Portal Admin&quot;)</errorConditionFormula>
    <errorDisplayField>Override_Business_Motion__c</errorDisplayField>
    <errorMessage>Only Partner Portal Admin can edit Override Business Motion field, please contact Partner Ops.</errorMessage>
</ValidationRule>