objects/Partner_Inquiry__c/validationRules/Purchasing_Model_Value_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchasing_Model_Value_Restriction</fullName>
    <active>true</active>
    <description>[INC0174261] &quot;Purchasing Model&quot; field on the Partner Inquiry Object. Only the Tanium Partner Portal Admin Profile should be able to save a record with &quot;Single Transactor&quot; selected in the &quot;Purchasing Model&quot; field. Both the &quot;Tanium CAM&quot; and &quot;Tanium Standard</description>
    <errorConditionFormula>ISCHANGED(Sales_Model__c) &amp;&amp;

ISPICKVAL(Sales_Model__c,&quot;Single Transactor&quot;)&amp;&amp;

NOT($Profile.Name=&quot;API Only Integration Admin&quot;) &amp;&amp;
NOT($Profile.Name=&quot;System Administrator&quot;) &amp;&amp;
NOT($Profile.Name=&quot;Tanium System Administrator&quot;) &amp;&amp;
NOT($Profile.Name=&quot;Tanium Partner Portal Admin&quot;)

/*ISCHANGED(Sales_Model__c) &amp;&amp;

ISPICKVAL(Sales_Model__c,&quot;Single Transactor&quot;)&amp;&amp;

NOT($Profile.Name=&quot;API Only Integration Admin&quot;) &amp;&amp;
NOT($Profile.Name=&quot;System Administrator&quot;) &amp;&amp;
NOT($Profile.Name=&quot;Tanium Partner Portal Admin&quot;)*/</errorConditionFormula>
    <errorMessage>Only Partner Portal Admin can select &quot;Single Transactor&quot; in Purchasing Model field. Please contact Partner Ops.</errorMessage>
</ValidationRule>