objects/Partner_Inquiry__c/listViews/Partner_Inquires.listView-meta.xml
<ListView>
    <fullName>Partner_Inquires</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>PDD_CAD__c</columns>
    <columns>Region__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Mapped_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Approval_Flow_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Date_Approved_Inquiry__c</columns>
    <columns>Date_Rejected_Inquiry__c</columns>
    <columns>Date_Approved_Enrollment__c</columns>
    <columns>Date_Rejected_Enrollment__c</columns>
    <filterScope>Everything</filterScope>
    <label>Partner Inquires</label>
</ListView>