objects/Partner_Inquiry__c/listViews/Partner_Inquires_Approvals_Not_Started.listView-meta.xml
<ListView>
    <fullName>Partner_Inquires_Approvals_Not_Started</fullName>
    <columns>Status__c</columns>
    <columns>Approval_Flow_Status__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>PDD_CAD__c</columns>
    <columns>Region__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Business_Email__c</columns>
    <columns>Mapped_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Date_Approved_Inquiry__c</columns>
    <columns>Date_Rejected_Inquiry__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Flow_Status__c</field>
        <operation>equals</operation>
        <value>Approvals not started</value>
    </filters>
    <label>Partner Inquires Approvals Not Started</label>
    <sharedTo>
        <group>zDT_Partner_Portal_Core</group>
    </sharedTo>
</ListView>