objects/Partner_Inquiry__c/listViews/Partner_Inquiries_Assignment_Needed.listView-meta.xml
<ListView>
    <fullName>Partner_Inquiries_Assignment_Needed</fullName>
    <booleanFilter>1 AND (2 OR 5) AND (3 OR 6) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Region__c</columns>
    <columns>HQ_Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Status_Notes__c</columns>
    <columns>Partner_Vertical__c</columns>
    <columns>Partner_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inquiry Submitted</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Austin</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Boyington</value>
    </filters>
    <filters>
        <field>Approval_Flow_Status__c</field>
        <operation>equals</operation>
        <value>Approvals not started</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>James</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Shaw</value>
    </filters>
    <label>Partner Inquiries Assignment Needed</label>
    <sharedTo>
        <group>Channel_Ops</group>
    </sharedTo>
</ListView>