objects/Partner_Inquiry__c/listViews/Procurement_Partner_Inquiry.listView-meta.xml
<ListView>
    <fullName>Procurement_Partner_Inquiry</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Region__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Approval_Flow_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Date_Approved_Inquiry__c</columns>
    <columns>Date_Rejected_Inquiry__c</columns>
    <filterScope>Everything</filterScope>
    <label>Procurement Partner Inquiry</label>
    <sharedTo>
        <group>Procurement</group>
        <group>System_Admins</group>
    </sharedTo>
</ListView>