objects/Partner_Inquiry__c/listViews/Tax_Review_Approvers_Queue_Partner_Inquiry.listView-meta.xml
<ListView>
    <fullName>Tax_Review_Approvers_Queue_Partner_Inquiry</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Tax Review Approvers Queue</label>
    <language>en_US</language>
    <queue>Tax_Review_Approvers_Queue</queue>
    <sharedTo>
        <group>Tax_Review_Approvers_Group</group>
    </sharedTo>
</ListView>